update manifest filename_extension

--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -18,7 +18,7 @@
     "untitledTest.cpp"
   ],
 
-  "filename_extension" : ".c",
+  "filename_extension": [ ".c", ".h" ],
 
   "progress_regexs" : [
     "Errors \(.* ms\)",
