added .cpp as a filename-extension in manifest.json file

--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -18,7 +18,7 @@
     "untitledTest.cpp"
   ],
 
-  "filename_extension": [ ".c", ".h" ],
+  "filename_extension": [ ".c", ".h", ".cpp" ],
 
   "progress_regexs" : [
     "Errors \(.* ms\)",
