added hidden_filenames to manifest.json

--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -20,6 +20,8 @@
 
   "filename_extension": [ ".c", ".h", ".cpp" ],
 
+  "hidden_filenames": [ "objs/" ],
+
   "progress_regexs" : [
     "Errors \(.* ms\)",
     "OK \(.* ms\)"
