fix broken hidden_filenames entry in manifest.json

--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -20,7 +20,7 @@
 
   "filename_extension": [ ".c", ".h", ".cpp" ],
 
-  "hidden_filenames": [ "objs/" ],
+  "hidden_filenames": [ "objs/.*" ],
 
   "progress_regexs" : [
     "Errors \(.* ms\)",
