--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -1,6 +1,6 @@
 {
+  "image_name": "cyberdojofoundation/gcc_cpputest",
   "display_name": "C (gcc), CppUTest",
-
   "visible_filenames": [
     "untitledTest.cpp",
     "AllTests.cpp",
@@ -9,19 +9,15 @@
     "untitled.h",
     "makefile"
   ],
-
-  "image_name": "cyberdojofoundation/gcc_cpputest",
-
   "highlight_filenames": [
     "untitled.c",
     "untitled.h",
     "untitledTest.cpp"
   ],
-
   "filename_extension": [ ".c", ".h", ".cpp" ],
-
+  "max_seconds": 10,
+  "tab_size": 4,
   "hidden_filenames": [ "objs/.*" ],
-
   "progress_regexs" : [
     "Errors \(.* ms\)",
     "OK \(.* ms\)"
