--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -1,7 +1,8 @@
 {
   "image_name": "cyberdojofoundation/gcc_cpputest",
   "display_name": "C (gcc), CppUTest",
-  "visible_filenames": [
+  "visible_filenames":
+  [
     "untitledTest.cpp",
     "AllTests.cpp",
     "cyber-dojo.sh",
@@ -9,7 +10,8 @@
     "untitled.h",
     "makefile"
   ],
-  "highlight_filenames": [
+  "highlight_filenames":
+  [
     "untitled.c",
     "untitled.h",
     "untitledTest.cpp"
@@ -18,7 +20,8 @@
   "max_seconds": 10,
   "tab_size": 4,
   "hidden_filenames": [ "objs/.*" ],
-  "progress_regexs" : [
+  "progress_regexs" :
+  [
     "Errors \(.* ms\)",
     "OK \(.* ms\)"
   ]
