Switch to ubuntu base image

--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,10 +1,6 @@
-FROM ghcr.io/cyber-dojo-languages/ubuntu-build-essential-22.04:651ad74
-# FROM ghcr.io/cyber-dojo-languages/gcc:064b8d0
+FROM ghcr.io/cyber-dojo-languages/ubuntu-build-essential-22-04:651ad74
 LABEL maintainer=jon@jaggersoft.com
 
-#COPY install.sh .
-#RUN ./install.sh && rm ./install.sh
-
-RUN apt-get install cpputest
+RUN apt-get install --yes cpputest
 
 COPY red_amber_green.rb /usr/local/bin
